# my_dock

./: CMakeLists.txt  README.md  README_zn.md
cmake/: build_config.cmake  install_config.cmake
include/gui/: main_window.h
src/: main.cpp
src/gui/: main_window.cpp
translations/: my_dock_en_AS.ts  my_dock_ja_JP.ts
ui/: main_window.ui
